[gd_scene load_steps=2 format=3 uid="uid://xpnasl0gcjph"]

[ext_resource type="Script" path="res://Assets/Scripts/UI/SettingsMenu.gd" id="1"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SettingsButtons" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2

[node name="Vsync" type="CheckButton" parent="Panel/ScrollContainer/SettingsButtons" groups=["Buttons"]]
layout_mode = 2
text = "Vsync"

[node name="TouchControlMode" type="CheckButton" parent="Panel/ScrollContainer/SettingsButtons" groups=["Buttons"]]
layout_mode = 2
text = "i18n_settings_TOUCHCONTROL"

[node name="Language" type="OptionButton" parent="Panel/ScrollContainer/SettingsButtons" groups=["Buttons"]]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
alignment = 2

[node name="BackButton" type="Button" parent="Panel/Buttons"]
layout_mode = 2
text = "i18n_BACK"

[node name="SaveButton" type="Button" parent="Panel/Buttons"]
layout_mode = 2
text = "i18n_SAVE"

[connection signal="pressed" from="Panel/Buttons/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Panel/Buttons/SaveButton" to="." method="_on_SaveButton_pressed"]
